plugins {
    id 'java'
}

dependencies {
    compileOnly project(':accessor')
    // https://mvnrepository.com/artifact/org.jetbrains/annotations
    compileOnly group: 'org.jetbrains', name: 'annotations', version: '20.1.0'
    compile project(':java8')
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
compileJava {
    sourceCompatibility = JavaVersion.VERSION_1_9
    targetCompatibility = JavaVersion.VERSION_1_9
    options.compilerArgs.addAll([
            '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED',
            '--add-exports', 'java.base/jdk.internal.access=ALL-UNNAMED'
    ])
}
